# SmartClip

./: .gitignore  CMakeLists.txt  HistoryManager.cpp  HistoryManager.h  Info.plist  LaunchAgentManager.cpp  LaunchAgentManager.h  Makefile  SettingsDialog.cpp  SettingsDialog.h  SettingsManager.cpp  SettingsManager.h  SmartClipApp.cpp  SmartClipApp.h  main.cpp  resources.qrc
icons/: SmartClip.icns
tests/: CMakeLists.txt  HistoryManagerTest.cpp  LaunchAgentManagerTest.cpp  README.md  SettingsDialogTest.cpp  SmartClipAppTest.cpp
